# FreeCAD-Assistant

./: .gitignore  CLAUDE.md  Init.py  InitGui.py  README.md  package.xml
assistant/: _plan_parser_shim.py  chat_panel.py  command.py  executor.py  llm_client.py  llm_worker.py  orchestrator.py  plan_parser.py  preferences.py  system_prompt.py
assistant/rag/: chunker.py  embeddings.py  recipes.json  retriever.py  store.py
docs/: PLAN.md
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs  plan_parser.rs
